# SimPO

./: .gitignore  README.md  environment.yml  pyproject.toml
alignment/: __init__.py  configs.py  model_utils.py
docs/: SETUP_UV.md
on_policy_data_gen/: README.md
scripts/: diagnose_flash_attn.py  install_prebuilt_flash_attn.py  run_simpo.py  simpo_trainer.py
training_configs/: gemma-2-9b-it-simpo.yaml  llama-3-8b-base-sft.yaml  llama-3-8b-instruct-simpo-v2.yaml  llama-3-8b-instruct-simpo.yaml  mistral-7b-base-simpo.yaml  mistral-7b-instruct-simpo.yaml
