[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alignment*"]

[project]
name = "simpo"
version = "0.3.0.dev0"
description = "SimPO: Simple Preference Optimization"
requires-python = ">=3.10"
dependencies = [
    # Core training stack
    "accelerate==0.29.2",
    "datasets==2.18.0",
    "huggingface-hub==0.24.0",
    "numpy>=1.26.4",
    "packaging>=24.0",
    "peft==0.7.1",
    "safetensors>=0.4.2",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.15.2,<1.0",
    "torch>=2.4.0",
    "transformers==4.44.2",
    "trl==0.9.6",
    # Utilities
    "jinja2>=3.1.3",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.2",
    # Linux-only (CUDA) packages -- skipped on macOS
    "bitsandbytes>=0.41.2; sys_platform == 'linux'",
    "deepspeed>=0.12.2; sys_platform == 'linux'",
]

[project.optional-dependencies]
wandb = ["wandb>=0.13.11"]

# --- uv-specific configuration ---
[tool.uv]

# flash-attn needs torch at build time but doesn't declare it
[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

# vllm and flash-attn require CUDA to even resolve/build,
# so they live in a dev group that is not installed by default.
# Install on the cluster with: uv sync --group cuda
# For training stability, do not install the `cuda` group unless you need those tools.
[dependency-groups]
cuda = [
    "flash-attn>=2.5.7; sys_platform == 'linux'",
    "vllm>=0.4.0; sys_platform == 'linux'",
]

# Platform-conditional torch: CUDA on Linux, CPU on macOS
[tool.uv.sources]
torch = [
    { index = "torch-cpu", marker = "platform_system == 'Darwin'" },
    { index = "torch-gpu", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
