[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "simpo-training"
version = "0.1.0"
description = "Dependency-managed environment for SimPO training scripts."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "torch>=2.4,<2.8",
  "transformers>=4.47,<5",
  "trl>=0.11,<1",
  "accelerate>=1.0,<2",
  "datasets>=3.0,<4",
  "numpy>=1.26,<3",
  "peft>=0.13,<1",
  "huggingface-hub>=0.25,<1",
  "tokenizers>=0.20,<1",
  "sentencepiece>=0.2,<1",
  "safetensors>=0.4.5,<1",
  "pyyaml>=6.0.2,<7",
  "jinja2>=3.1.4,<4",
  "tqdm>=4.66.5,<5",
]

[project.optional-dependencies]
wandb = [
  "wandb>=0.18,<1",
]
quant = [
  "bitsandbytes>=0.45; platform_system == 'Linux'",
]
deepspeed = [
  "deepspeed>=0.15,<1; platform_system == 'Linux'",
]
flash-attn = [
  "flash-attn>=2.7,<3; platform_system == 'Linux'",
]
all = [
  "wandb>=0.18,<1",
  "bitsandbytes>=0.45; platform_system == 'Linux'",
  "deepspeed>=0.15,<1; platform_system == 'Linux'",
  "flash-attn>=2.7,<3; platform_system == 'Linux'",
]

[tool.uv]
package = false
